infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: postapp.com
    http:
      paths:
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-srv
            port:
              number: 3002
      - path: /posts/.*/comments/
        pathType: Prefix
        backend:
          service:
            name: comments-srv
            port:
              number: 3001
      - path: /event
        pathType: Prefix
        backend:
          service:
            name: event-bus-srv
            port:
              number: 3004
      - path: /queryservice
        pathType: Prefix
        backend:
          service:
            name: query-srv
            port:
              number: 3003
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
